--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import url('./styles/index.less');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   margin: 0;
   padding: 0;
