--- a/src/layout/index.module.less
+++ b/src/layout/index.module.less
@@ -3,7 +3,7 @@
   box-shadow: 0px 1px 4px 0px rgba(0, 21, 41, 0.12);
   color: white;
 
-  .user_icon{
+  .header_right{
     margin-left: auto;
   }
 }
