--- a/src/components/iconButton/index.module.less
+++ b/src/components/iconButton/index.module.less
@@ -4,14 +4,15 @@
 }
 
 .button_block {
-  padding: 2px;
+  height: max-content;
+  padding: 4px;
   border-radius: 2px;
 
   &:hover {
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(0, 0, 0, 0.06);
   }
 
   &:active {
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(0, 0, 0, 0.08);
   }
 }
