--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('./styles/index.less');
+@import url("./styles/index.less");
 
 @tailwind base;
 @tailwind components;
@@ -7,6 +7,7 @@
 * {
   margin: 0;
   padding: 0;
+  transition: background-color, color, background 0.3s;
 }
 
 body {
