--- a/src/layout/index.module.less
+++ b/src/layout/index.module.less
@@ -1,9 +1,9 @@
 .header {
-  background: linear-gradient(0deg, #1F1F1F 0%, #1F1F1F 100%), #202125;
+  background: var(--bg-color);
   box-shadow: 0px 1px 4px 0px rgba(0, 21, 41, 0.12);
   color: white;
 
-  .header_right{
+  .header_right {
     margin-left: auto;
   }
 }
