--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,3 +1,5 @@
 @import url("./common.less");
 @import url("./flex.less");
 @import url("./color.less");
+@import url("./theme/dark.less");
+@import url("./theme/light.less");
